--- a/static/style.css
+++ b/static/style.css
@@ -1,13 +1,24 @@
-.pageSection {
-    margin: 10px;
+.lvl1 {
+    margin: 15px;
+}
+
+.lvl2 {
+    margin: 15px 5px 15px 5px;
 }
 
 .appTitle {
-    font-size: 1.5em;
+    font-size: 2.5em;
+    font-weight: bold;
 }
 
-.sectionTitle {
-    font-size: 1.2em;
+.title1 {
+    font-size: 1.7em;
+    font-weight: bold;
+}
+
+.title2 {
+    font-size: 1.3em;
+    font-weight: bold;
 }
 
 #fileList {
