--- a/static/styles.css
+++ b/static/styles.css
@@ -1,30 +1,27 @@
+img {
+    border: 1px solid black;
+}
+
+input[type=text] {
+    display: block;
+}
+
+input[type=number] {
+    display: block;
+}
+
 .lvl1 {
-    margin: 15px;
+    margin: 15px 0px;
+    padding: 5px;
+    border: 1px solid black;
+    border-radius: 5px;
 }
 
 .lvl2 {
     margin: 15px 5px 15px 5px;
 }
 
-.appTitle {
-    font-size: 2.5em;
-    font-weight: bold;
-}
-
-.title1 {
-    font-size: 1.7em;
-    font-weight: bold;
-}
-
-.title2 {
-    font-size: 1.3em;
-    font-weight: bold;
-}
-
 #fileList {
     margin: 5px;
 }
 
-img {
-    border: 1px solid black;
-}
